[gd_scene load_steps=6 format=3 uid="uid://dio4ll0sqo0k5"]

[ext_resource type="Texture2D" uid="uid://c4lfk1h8p8wyu" path="res://assets/Level_Completed_Blank.png" id="1_hhoem"]
[ext_resource type="Script" uid="uid://bbsbfxbnv3uua" path="res://scripts/level_complete.gd" id="1_rovvh"]
[ext_resource type="FontFile" uid="uid://dkxfstws7ia8r" path="res://assets/Xav_button_font-Regular.ttf" id="2_4x1ak"]
[ext_resource type="Theme" uid="uid://758a86rjoymm" path="res://assets/theme.tres" id="4_3oeyx"]
[ext_resource type="AudioStream" uid="uid://bf44xutpy6l5w" path="res://sounds/BGM/Title Screen BGM.wav" id="5_3oeyx"]

[node name="level_complete" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rovvh")

[node name="LevelCompletedBlank" type="Sprite2D" parent="."]
position = Vector2(641.523, 360.398)
scale = Vector2(0.871223, 0.870281)
texture = ExtResource("1_hhoem")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -66.0
offset_top = 140.0
offset_right = 66.0
offset_bottom = 163.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0.786733, 0.775828, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_constants/shadow_outline_size = 10
theme_override_fonts/font = ExtResource("2_4x1ak")
theme_override_font_sizes/font_size = 71
text = "Level
Complete"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -103.0
offset_top = -24.0
offset_right = 103.0
offset_bottom = 169.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 35

[node name="next_level" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_3oeyx")
text = "next level"

[node name="menu" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_3oeyx")
text = "back to main menu"

[node name="level_complete_music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_3oeyx")
bus = &"Music"

[connection signal="pressed" from="MarginContainer/VBoxContainer/next_level" to="." method="_on_next_level_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/menu" to="." method="_on_menu_pressed"]
